# DevAI-Skill-Hub

./: .gitignore  CLAUDE.md  DevAI Skill Hub 产品需求文档（PRD）.md  README.md  package.json  pnpm-lock.yaml
scripts/: skill_hook.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src/api/: skill.ts
src/components/: AppLayout.vue
src/router/: index.ts
src/stores/: skill.ts
src/views/: Dashboard.vue  Settings.vue  Skills.vue
