[package]
name = "devai-skill-hub"
version = "1.0.0"
description = "DevAI Skill Hub - Skill 标准化管控平台"
authors = ["DevAI Team"]
edition = "2021"

[lib]
name = "devai_skill_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
shellexpand = "3"
dirs = "5"
